修复毒鸡汤bug

--- a/djt.html
+++ b/djt.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>随机背景+毒鸡汤</title>
 </head>
-<body style="background:url(http://api.btstu.cn/sjbz/api.php?lx=suiji&format=images) center fixed;background-size:cover;">
+<body style="background:url(https://api.btstu.cn/sjbz/api.php?lx=suiji&format=images) center fixed;background-size:cover;">
 <span id='talk' style="font-size:24px;background:#ccc6;border-radius:4px;color:#333;" onclick="location.reload()"></span>
 <script src="https://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script> 
 <script>
-$.getJSON("http://api.btstu.cn/yan/api.php?charset=utf-8&encode=json").then(x=>talk.innerText=x.text);
+$.getJSON("https://api.btstu.cn/yan/api.php?charset=utf-8&encode=json").then(x=>talk.innerText=x.text);
 </script>
 </body>
 </html>
