--- a/heart/index.html
+++ b/heart/index.html
@@ -17,7 +17,7 @@
 
         #expression {
             display: block;
-            margin: 10% 16px 8px;
+            margin: 80px 16px 8px;
             color: #f1ebe5;
             font-size: 28px;
             text-indent: 2em;
