--- a/emoji/emoji.html
+++ b/emoji/emoji.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="抖音 emoji douyin">
     <meta name="author" content="Jackect">
     <meta name="date" content="2025-09-30">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="//p-pc-weboff.byteimg.com/tos-cn-i-9r5gewecjs/favicon.png">
     <style>
         * {
